# TMMsolver

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Device.cpp  Device.h  README.md  TMM.sln  TMM.vcxproj  TMM.vcxproj.filters  common.h  content.json  main.cpp  tree.txt  userFunc.cpp  userFunc.h
Input/: content.json
Output/: plotfigure.asv
Output/plot/: tmm.opju
examples1/: content.json  example1.cpp
examples1/postdata/: Rp.txt  Ts.txt  lambda.txt  plotfigure.m
images/: 新建 Microsoft PowerPoint 演示文稿.pptx
include/: TMMsolve.h  common.h  userfunc.h
postdata/: Rs.txt  Tp.txt  theta.txt
postdata/plot/: tmm.opju
src/: TMMsolve.cpp  userfunc.cpp
